cmake_minimum_required(VERSION 3.23)
project(hello_c_clion C)

set(CMAKE_C_STANDARD 99)

add_executable(hello_c_clion main.c)

add_executable(6.const 6.const.c)
add_executable(341 341.c)
add_executable(a+b+c a+b+c.c)
add_executable(chenjifengji chenjifengji.c)
add_executable(1.liangshuzhihe leetcode/1.liangshuzhihe.c)
add_executable(lbzbudaikongge "a new/lbzbudaikongge.c" "a new/jiecheng.c" "a new/test2.c" "a new/panduanshifouweisushu.c" "a new/lcq.c" "a new/16jinzhizhuan10jinzhi.c" "a new/xiaoqiuxialuowenti.c" "a new/shucujinzita.c" "a new/zhenzhenshudezuiyoufenjie.c" "a new/zuixiaogongbeishu.c" "a new/zifuchuanyuansutongji.c" "a new/shuzipaixu.c" "a new/chazhao.c" "a new/tongjizhenzhenshugeshu.c" "a new/zhongjianshu.c" "a new/shuzipaixucsdn.c")
add_executable(jiecheng "a new/jiecheng.c")
add_executable(test2 "a new/test2.c")
add_executable(panduanshifouweisushu "a new/panduanshifouweisushu.c")
add_executable(lcq "a new/lcq.c")
add_executable(shuixianhuashu "a new/shuixianhuashu.c")
add_executable(16jinzhizhuan10jinzhi "a new/16jinzhizhuan10jinzhi.c")
add_executable(xiaoqiuxialuowenti "a new/xiaoqiuxialuowenti.c")
add_executable(shucujinzita "a new/shucujinzita.c")
add_executable(wendutongji "a new/wendutongji.c")
add_executable(zhenzhenshudezuiyoufenjie "a new/zhenzhenshudezuiyoufenjie.c")
add_executable(zhenzhenshuzuiyoufenjiecsdn "a new/zhenzhenshuzuiyoufenjiecsdn.c")
add_executable(zuixiaogongbeishu "a new/zuixiaogongbeishu.c")
add_executable(zifuchuanyuansutongji "a new/zifuchuanyuansutongji.c")
add_executable(huiwenshu "a new/huiwenshu.c")
add_executable(dencushulie "a new/dencushulie.c")
add_executable(chazhao "a new/chazhao.c")
add_executable(tongjizhenzhenshugeshu "a new/tongjizhenzhenshugeshu.c")
add_executable(zhongjianshu "a new/zhongjianshu.c")